portfolio.yaml
---
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: portfolio
  namespace: portfolio
  labels:
    app: portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: fiiyinfoluwa/portfolio:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
            requests:
              memory: "64Mi"
              cpu: "0.1"

        - name: adapter
          image: nginx/nginx-prometheus-exporter:0.8.0
          args: ["-nginx.scrape-uri", "http://localhost/metrics"]
          ports:
            - containerPort: 9113
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
            requests:
              memory: "64Mi"
              cpu: "0.1"

---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio
  labels:
    app: portfolio
spec:
  selector:
    app: portfolio
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP

---
apiVersion: v1 
kind: Service 
metadata:
  name: nginx-exporter-service
  namespace: portfolio
  labels: 
    app: nginx-metrics
spec:
  selector:
    app: portfolio
  type: ClusterIP
  ports:
    - name: metrics
      protocol: TCP
      port: 8080
      targetPort: 9113
