loki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ui
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: loki.fiiyinfoluwa.live
    http:
      paths:
      - backend:
          service:
            name: kube-prometheus-stack-loki
            port:
              number: 80
        path: /
        pathType: Prefix
