sockshop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sockshop
  annotations:
  cert-manager.io/cluster-issuer: "letsencrypt-prod"
  namespace: sock-shop
spec:
  tls:
  - hosts:
    - sockshop.fiiyinfoluwa.live
    secretName: sockshop-tls
  ingressClassName: nginx
  rules:
      -  host: sockshop.fiiyinfoluwa.live
         http:
          paths:
          - backend:
              service:
                name: front-end
                port:
                  number: 80
            path: /
            pathType: Prefix
